--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<!-- <router-outlet></router-outlet> -->
 
-<p>My new deploy</p>
-<router-outlet></router-outlet>
+<div id="tlkio"
+data-channel="newtestingchat3"
+data-theme="theme--night"
+style="width:100%;height:100%;"></div>
