--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 
 <div id="tlkio"
 data-channel="newtestingchat3"
+data-nickname="paciente"
 data-theme="theme--night"
-style="width:100%;height:100%;"></div>
+style="width:100%;height:75%;"></div>
