--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- <router-outlet></router-outlet> -->
 
 <div id="tlkio"
-data-channel="newtestingchat3"
+data-channel="fruei-pub-tlkio-test"
 data-nickname="paciente"
 data-theme="theme--night"
 style="width:100%;height:75%;"></div>
