--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
 <div id="tlkio"
 data-channel="fruei-pub-tlkio-test"
 data-nickname="paciente"
+data-theme="http://localhost:4200/styles.css"
 data-theme="theme--night"
 style="width:100%;height:75%;"></div>
