--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
 <div id="tlkio"
 data-channel="fruei-pub-tlkio-test"
 data-nickname="paciente"
-data-theme="https://fruei.github.io/deploy-testing/styles.css"
+data-theme="https://fruei.github.io/deploy-testing/styles.c1e52b381aa4d45f6cd5.css"
 data-theme="theme--night"
 style="width:100%;height:75%;"></div>
