--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- <router-outlet></router-outlet> -->
-
 <div id="tlkio"
-data-channel="fruei-pub-tlkio-test"
-data-nickname="paciente"
-data-theme="https://raw.githubusercontent.com/tlkio/tlkio-themes/master/_themes/pop.scss"
-style="width:100%;height:75%;"></div>
+    data-channel="fruei-pub-tlkio-test"
+    data-nickname="paciente"
+    data-theme="theme--day"
+    data-custom-css="https://fruei.github.io/deploy-testing/styles.f1f1776909c589e3bb07.css"    
+    style="width:100%;height:75%;"></div>
