--- a/src/tlk-theme.css
+++ b/src/tlk-theme.css
@@ -1,13 +1,10 @@
-html,
-body {
-    height: 100%;
-    background-color: gainsboro;
-}
+
+/* tlk.io night theme */
 
 .button.button {
-    color: #fb9292;
-    border-color: rgba(118, 32, 255, 0.4);
-    background-color: #98a9c7;
+    color: #999999;
+    border-color: rgba(0,0,0,0.4);
+    background-color: #3d4148;
     background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(255,255,255,0.05)), color-stop(100%, rgba(255,255,255,0)));
     background-image: -webkit-linear-gradient(top, rgba(255,255,255,0.05), rgba(255,255,255,0));
     background-image: -moz-linear-gradient(top, rgba(255,255,255,0.05), rgba(255,255,255,0));
@@ -17,11 +14,11 @@ body {
 }
 
 .button.button:hover {
-    background-color: #059128
+    background-color: #383c42
 }
 
 .button.button:active {
-    background-color: #2688eb;
+    background-color: #1a1c1e;
     box-shadow: none
 }
 
