--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
     data-channel="fruei-pub-tlkio-test"
     data-nickname="paciente"
     data-theme="theme--day"
-    data-custom-css="https://fruei.github.io/deploy-testing/styles.f1f1776909c589e3bb07.css"    
+    data-custom-css="https://raw.githubusercontent.com/fruei/deploy-testing/main/src/tlk-theme.css"
     style="width:100%;height:75%;"></div>
