--- a/src/tlk-theme.css
+++ b/src/tlk-theme.css
@@ -1,10 +1,8 @@
 
-/* tlk.io night theme */
-
 .button.button {
-    color: #999999;
-    border-color: rgba(0,0,0,0.4);
-    background-color: #3d4148;
+    color: #fb9292;
+    border-color: rgba(118, 32, 255, 0.4);
+    background-color: #98a9c7;
     background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, rgba(255,255,255,0.05)), color-stop(100%, rgba(255,255,255,0)));
     background-image: -webkit-linear-gradient(top, rgba(255,255,255,0.05), rgba(255,255,255,0));
     background-image: -moz-linear-gradient(top, rgba(255,255,255,0.05), rgba(255,255,255,0));
@@ -14,11 +12,11 @@
 }
 
 .button.button:hover {
-    background-color: #383c42
+    background-color: #059128
 }
 
 .button.button:active {
-    background-color: #1a1c1e;
+    background-color: #2688eb;
     box-shadow: none
 }
 
@@ -92,24 +90,24 @@
 }
 
 .header-channel.header-channel {
-    color: rgba(255,255,255,0.5)
+    color: rgba(255, 12, 12, 0.5)
 }
 
 .chat.chat {
-    color: #cccccc
+    color: #9c5555
 }
 
 .post-name.post-name {
-    color: rgba(255,255,255,0.3)
+    color: rgba(4, 255, 66, 0.3)
 }
 
 .post.post {
-    border-color: rgba(0,0,0,0.3);
+    border-color: rgba(255, 211, 211, 0.3);
     background-color: #31353a
 }
 
 .post.post.me {
-    background-color: #2d3034
+    background-color: #4285dd
 }
 
 .post-avatar.post-avatar {
@@ -117,12 +115,12 @@
 }
 
 .post-avatar--troll.post-avatar--troll {
-    color: rgba(255,255,255,0.2);
+    color: rgba(255, 120, 120, 0.2);
     background: rgba(0,0,0,0.2)
 }
 
 .time.time {
-    color: rgba(255,255,255,0.2)
+    color: rgba(5, 235, 128, 0.2)
 }
 
 .post-time-dot.post-time-dot {
@@ -130,17 +128,17 @@
 }
 
 .post-message.post-message.unread .post-time-dot {
-    background-color: #ffd500
+    background-color: #947d0c
 }
 
 .post-time-tag.post-time-tag {
-    border-color: rgba(0,0,0,0.4);
-    background: #1f1f1f
+    border-color: rgba(235, 204, 204, 0.4);
+    background: #d68d8d
 }
 
 .chat.chat code,
 .chat.chat pre {
-    color: #b8ad7a;
+    color: #be0c65;
     border: 1px solid rgba(0,0,0,0.2);
     background-color: #2a2922
 }
@@ -150,14 +148,14 @@
 }
 
 .chat.chat blockquote {
-    color: #6eb7f7;
+    color: #38f000;
     border: none;
-    border-left: 4px solid #3d9ff5;
-    background: #3d4148
+    border-left: 4px solid #ff3c00;
+    background: #e03b3b
 }
 
 .chat.chat hr {
-    border-color: rgba(255,255,255,0.1)
+    border-color: rgba(255, 0, 0, 0.1)
 }
 
 .message-avatar.message-avatar {
@@ -165,7 +163,7 @@
 }
 
 .message-input.message-input {
-    color: #fff;
+    color: rgb(181, 246, 255);
     border-color: rgba(0,0,0,0.3);
     background-color: rgba(0,0,0,0.15);
     box-shadow: inset 0 1px 3px rgba(0,0,0,0.06),0 1px 1px rgba(255,255,255,0.1);
